--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+
+    <uses-feature android:name="android.hardware.camera.flash" android:required="false" />
+
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.FLASHLIGHT" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -11,7 +22,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BT9"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".BT2.activity.LightControlClientActivity"
+            android:exported="false" />
+        <activity
+            android:name=".BT2.activity.UploadImagesActivity"
+            android:exported="false" />
+        <activity
+            android:name=".BT2.activity.ProfileActivity"
+            android:exported="false" />
+        <activity
+            android:name=".BT2.activity.MainActivity2"
+            android:exported="false"/>
         <activity
             android:name=".MainActivity"
             android:exported="true">
